Linking API to DBContext

--- a/FrisScore.API/appsettings.json
+++ b/FrisScore.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=frisscore.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
